--- a/porcelain/Cargo.toml
+++ b/porcelain/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Chris Zehner <chris@cbzehner.com>"]
 edition = "2018"
 
 [dependencies]
+yaml-rust = "0.3.5"
 
 [dependencies.clap]
 version = "2"
