feat: map porcelain flags to underlying binary

--- a/porcelain/configs/english/list.yaml
+++ b/porcelain/configs/english/list.yaml
@@ -6,13 +6,13 @@ args:
     - all:
         short: a
         long: all
-        help: List all entries, including hidden entries whose name begins with a dot (.), except for the current directory (.) and the parent directory (...)
-        # map: -A
+        about: List all entries, including hidden entries whose name begins with a dot (.), except for the current directory (.) and the parent directory (...)
+        map: -A
     - detail:
         short: d
         long: detail
-        help: Show additional detailed information, known as the "long format" for each file.
-        # map: -l
+        about: Show additional detailed information, known as the "long format" for each file.
+        map: -l
     # - sort:
     #     map:
     #         - size: -S
@@ -20,7 +20,6 @@ args:
     #         - accessed: -u
     #         - created: -U
     - PATH:
-        help: Path of the directory to display
-        required: true
+        about: Path of the directory to display
         value_name: path/to/directory
         default_value: . # Default to listing the current directory
