--- a/porcelain/Cargo.toml
+++ b/porcelain/Cargo.toml
@@ -5,8 +5,9 @@ authors = ["Chris Zehner <chris@cbzehner.com>"]
 edition = "2018"
 
 [dependencies]
-yaml-rust = "0.3.5"
+yaml-rust = "0.4.5"
 
 [dependencies.clap]
-version = "2"
+git = "https://github.com/cbzehner/clap"
+branch = "ignore-extra-fields-on-arg"
 features = ["yaml"]
