--- a/porcelain/Cargo.toml
+++ b/porcelain/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Chris Zehner <chris@cbzehner.com>"]
 edition = "2018"
 
 [dependencies]
+atty = "0.2"
 yaml-rust = "0.4.5"
 
 [dependencies.clap]
